# models/users.js
@@ -18,10 +18,15 @@ let userSchema = new Schema(
             trim: true
         },
         password: { type: String, required: true, min: 6, max: 255 },
-        role: { type: Number,   default : 1 },
-        avatar: { type: String, default: ''  },
-        date: { type: Date, default: Date.now },
-        project: { type: Schema.Types.ObjectId, default: 'null', ref:'projects'}
+        role: {
+            type: String,
+            default: 'user',
+            enum: ["user", "admin"]
+           },
+        avatar: { type: String },
+        /*avatar: { data: Buffer,
+                  contentType: String},*/
+        date: { type: Date, default: Date.now }
     }
 )
 module.exports = mongoose.model("user", userSchema);
